<resources>
    <string name="app_name">Atividade 2 - Layouts</string>
    <string name="button_5">Button 5</string>
    <string name="button_4">Button 4</string>
    <string name="button_3">Button 3</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_color_1">Color 1</string>
    <string name="button_color_2">Color 2</string>
    <string name="button_color_3">Color 3</string>
    <string name="button_color_clear">Clear</string>
    <string name="proximo_layout">Próximo layout</string>
    <string name="avisos">Avisos por:</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="login">Entrar</string>
    <string name="e_mail">E-mail</string>
    <string name="telefone">Telefone</string>
</resources>